--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,16 +9,18 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
+  cupertino_icons: ^1.0.2
+  firebase_auth: ^3.1.1
+  firebase_core: ^1.6.0
   flutter:
     sdk: flutter
-
-  cupertino_icons: ^1.0.2
   flutter_launcher_icons: ^0.9.2
-  introduction_screen: ^2.1.0
   font_awesome_flutter: ^9.1.0
+  google_sign_in: ^5.1.0
+  introduction_screen: ^2.1.0
+  provider: ^6.0.0
 
 dev_dependencies:
-
   flutter_test:
     sdk: flutter
 
@@ -37,7 +39,6 @@ flutter:
     - assets/images/
     - assets/icons/
   #   - images/a_dot_ham.jpeg
-
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
