--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   google_sign_in: ^5.1.0
   introduction_screen: ^2.1.0
   provider: ^6.0.0
+  shared_preferences: ^2.0.7
+  sizer: ^2.0.13
 
 dev_dependencies:
   flutter_test:
