--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
     sdk: flutter
   flutter_launcher_icons: ^0.9.2
   font_awesome_flutter: ^9.1.0
+  google_fonts: ^2.1.0
   google_sign_in: ^5.1.0
   introduction_screen: ^2.1.0
   provider: ^6.0.0
