--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   introduction_screen: ^2.1.0
   provider: ^6.0.0
   shared_preferences: ^2.0.7
+  shimmer: ^2.0.0
   sizer: ^2.0.13
 
 dev_dependencies:
