--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   font_awesome_flutter: ^9.1.0
   google_fonts: ^2.1.0
   google_sign_in: ^5.1.0
+  gsheets: ^0.3.2
   http: ^0.13.3
   introduction_screen: ^2.1.0
   provider: ^6.0.0
